--- a/app/views/layouts/sandboxes_test.html.erb
+++ b/app/views/layouts/sandboxes_test.html.erb
@@ -7,8 +7,8 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'joint.all', media: 'all', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag 'bpmn', media: 'all', 'data-turbolinks-track' => true %>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
     <!-- latest compiled and minified css -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
