--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,24 @@
-<footer>
+<footer class="site-footer">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4">
-        <p class="brand" href="#"><%= image_tag "logo.png" %></p>
-        <p><%= t(".estratega_description") %></p>
+      <div class="col-md-4">
+        <ul class="list-unstyled">
+          <li><a href="mailto:info@ciudadanointeligente.org?Subject=Estratega" class="email-prensa" target="_top" onclick="ga('send', 'event', 'footer-email', 'click');"><i class="fa fa-envelope-o" aria-hidden="true"></i> Mándanos un correo</a></li>
+          <li><a href="//github.com/ciudadanointeligente" target="_blank" onclick="ga('send', 'event', 'footer-github', 'click');"><i class="fa fa-github-alt" aria-hidden="true"></i> Revisa nuestro código</a></li>
+        </ul>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
-        <h5><%= t(".contact") %></h5>
-        <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
-        <p><i class="fa fa-envelope"></i> <a href="mailto:<%= t('.mailing_adress') %>"><%= t('.mail')%></a></p>
-        <p>&nbsp;<i class="fa fa-map-marker"></i>&nbsp; <%= t('.office_adress') %></p>
+      <div class="col-md-4">
+        <ul class="list-unstyled">
+          <li>
+            Un proyecto de <a href="//ciudadanointeligente.org" target="_blank" onclick="ga('send', 'event', 'footer-logo-fci', 'click');"><img src="//ckannet-storage.commondatastorage.googleapis.com/2015-01-22T13:31:59.187Z/logo-ciudadanoi-parafondooscuro.png" title="Fundación Ciudadano Inteligente" data-pin-nopin="true"></a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <ul class="list-unstyled">
+          <li><a href="//twitter.com/ciudadanoi" onclick="ga('send', 'event', 'footer-twitter', 'click');" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i> @Ciudadanoi</a></li>
+          <li><a href="//www.facebook.com/ciudadanointeligente" onclick="ga('send', 'event', 'footer-facebook', 'click');" target="blank"><i class="fa  fa-facebook" aria-hidden="true"></i> Ciudadano Inteligente</a></li>
+        </ul>
       </div>
     </div>
   </div>
