--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,15 +7,15 @@
           <li><a href="//github.com/ciudadanointeligente" target="_blank" onclick="ga('send', 'event', 'footer-github', 'click');"><i class="fa fa-github-alt" aria-hidden="true"></i> Revisa nuestro código</a></li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
         <ul class="list-unstyled">
-          <li>
-            Un proyecto de <a href="//ciudadanointeligente.org" target="_blank" onclick="ga('send', 'event', 'footer-logo-fci', 'click');"><img src="//ckannet-storage.commondatastorage.googleapis.com/2015-01-22T13:31:59.187Z/logo-ciudadanoi-parafondooscuro.png" title="Fundación Ciudadano Inteligente" data-pin-nopin="true"></a>
+          <li>Un proyecto de</li>
+          <li><a href="//ciudadanointeligente.org" target="_blank" onclick="ga('send', 'event', 'footer-logo-fci', 'click');"><img src="//ckannet-storage.commondatastorage.googleapis.com/2015-01-22T13:31:59.187Z/logo-ciudadanoi-parafondooscuro.png" title="Fundación Ciudadano Inteligente" data-pin-nopin="true"></a>
           </li>
         </ul>
       </div>
       <div class="col-md-4">
-        <ul class="list-unstyled">
+        <ul class="list-unstyled pull-right">
           <li><a href="//twitter.com/ciudadanoi" onclick="ga('send', 'event', 'footer-twitter', 'click');" target="blank"><i class="fa fa-twitter" aria-hidden="true"></i> @Ciudadanoi</a></li>
           <li><a href="//www.facebook.com/ciudadanointeligente" onclick="ga('send', 'event', 'footer-facebook', 'click');" target="blank"><i class="fa  fa-facebook" aria-hidden="true"></i> Ciudadano Inteligente</a></li>
         </ul>
