--- a/app/views/layouts/_navbar_signin.erb
+++ b/app/views/layouts/_navbar_signin.erb
@@ -13,6 +13,9 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div id="navbar" class="nav navbar-collapse collapse pull-right">
     <ul class="nav navbar-nav">
+          <li><a href="#metodologia">Metodología</a></li>
+          <li><a href="#testimonios">Testimonios</a></li>
+          <li><a href="#usanestratega">Usan Estratega</a></li>
       <li class="dropdown">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><%= t('.sign_in') %><span class="caret"></span></button>
         <ul class="dropdown-menu dropdown-menu-button">
