--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -38,7 +38,7 @@
   </div>
 </section>
 </div>
-<div class="testimonial">
+<div class="testimonial" id="testimonios">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -67,7 +67,7 @@
     </div>
   </div>
 </div>
-<div class="organizations">
+<div class="organizations" id="usanestratega">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -75,16 +75,16 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         <a href="http://www.techo.org/paises/chile/" target="_blank"><%= image_tag "logo-techo.svg", class: "logos" %></a>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         <a href="http://www.hogardecristo.cl/" target="_blank"><%= image_tag "logo-hogar.svg", class: "logos" %></a>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         <a href="http://ciudadanointeligente.org/" target="_blank"><%= image_tag "logo-fci.svg", class: "logos" %></a>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
          <a href="http://bordepolitico.com/" target="_blank"><img class="logos" src="/assets/logo-borde.svg" alt="Logo borde politico"></a>
        </div>     
     </div>
